--- a/static/css/contact-us.less
+++ b/static/css/contact-us.less
@@ -1,6 +1,6 @@
 /* ==========================================================================
    cfgov-refresh
-   Contact us
+   Contact us page.
    ========================================================================== */
 
 .helpful-terms_header {
@@ -47,6 +47,6 @@
 .contact-us-map {
     max-width: 330px;
     .respond-to-range(600px, 801px, {
-        float: right;            
+        float: right;
     });
 }
