--- a/static/css/lists.less
+++ b/static/css/lists.less
@@ -303,7 +303,8 @@
     &.list__icons {
         .list_link {
             position: relative;
-            left: -0.125em; // adjust for optical alignment of icons
+            // Adjust for optical alignment of icons.
+            left: -0.125em;
         }
 
         .icon-link:before,
@@ -429,7 +430,7 @@
             & {
                 .webfont-medium();
                 color: @black;
-            }            
+            }
         });
     }
 }
