--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -3,7 +3,6 @@
    meta
    ========================================================================== */
 
-
 /* topdoc
   name: Tags
   family: cfgov-meta
@@ -247,7 +246,7 @@
         position: relative;
         .h6();
         display: block;
-        // Eyeballed to 15px including line height.
+        // Eyeballed to 15px including line-height.
         padding: 12px 0 8px;
         margin: 0 0 0 unit(@bullet-font-size / @font-size, em);
         // Match the height of the bullet.
@@ -275,7 +274,7 @@
         display: block;
         width: 1em;
         color: @gold-80;
-        // 12px is the font size of .tags_link
+        // 12px is the font size of .tags_link.
         font-size: unit(@bullet-font-size / 12px, em);
     }
 
