--- a/static/css/press-resources.less
+++ b/static/css/press-resources.less
@@ -1,6 +1,6 @@
 /* ==========================================================================
    cfgov-refresh
-   Press resources (Newsroom)
+   Press resources (Newsroom) page.
    ========================================================================== */
 
 .press-section + .press-section {
@@ -14,7 +14,8 @@
 }
 
 .press-contacts_people {
-    margin-top: 1.75em; // works out to about 30px including line-height
+    // Works out to about 30px including line-height.
+    margin-top: 1.75em;
 }
 
 .contact-person {
