--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -45,7 +45,7 @@
 
 .summary {
 
-    // Incase .summary is used on an inline element like <a>
+    // Incase .summary is used on an inline element like <a>.
     display: block;
 
     &_heading {
