--- a/static/css/bureau-structure.less
+++ b/static/css/bureau-structure.less
@@ -1,51 +1,56 @@
+/* ==========================================================================
+   cfgov-refresh
+   Bureau structure page at /the-bureau/bureau-structure/.
+   ========================================================================== */
+
 .org-chart {
-    
+
     .respond-to-min(600, {
         width: 530px;
         margin: 0 auto;
     });
-    
+
     .respond-to-min(1024, {
         width: 660px;
     });
-    
+
     &_root {
         margin-left: auto;
         margin-right: auto;
         text-align: center;
     }
-    
+
     &_branches,
     &_nodes {
         list-style-type: none;
         margin: 0;
         padding: 0;
     }
-    
-    /* On larger screen sizes, the lines of the org chart are drawn with before & after 
+
+    /* On larger screen sizes, the lines of the org chart are drawn with before & after
        pseudo elements applied to .org-chart_branches & .org-chart_branch.
      */
     &_branches {
         padding-top: unit(@grid_gutter-width, px);
-        
+
         /* :before pseudo element's left border draws a centered vertical line
            down from .org-chart_root to .org-chart_branches.*/
         .respond-to-min(600px, {
             position: relative;
-            
+
             &:before{
                 content: '';
-                position: absolute; 
-                top: 0; 
+                position: absolute;
+                top: 0;
                 left: 50%;
                 border-left: 1px solid @gray-50;
-                width: 0; 
+                width: 0;
                 height: unit(@grid_gutter-width, px);
             }
         });
     }
-    
-    &_branch {        
+
+    &_branch {
         /* Borders on .org-chart_branch pseudo elements (:after on first branch, :before on last)
            draw lines connecting the branch headers to the line from .org-chart_root. */
         .respond-to-min(600px, {
@@ -54,18 +59,18 @@
             padding-top: 45px;
             border-width: 0;
 
-            &:before, 
+            &:before,
             &:after {
                 content: '';
-                position: absolute; 
-                top: 0; 
-                width: 50%; 
+                position: absolute;
+                top: 0;
+                width: 50%;
                 height: unit(@grid_gutter-width, px);
                 border-color: @gray-50;
                 border-style: solid;
                 border-width: 0;
             }
-            
+
             &:first-child {
                 padding-right: unit(@grid_gutter-width / 2, px);
 
@@ -94,7 +99,7 @@
             });
         }
     }
-    
+
     &_role {
         padding: unit(@grid_gutter-width / 2, px);
         padding-right: unit(@grid_gutter-width, px);
@@ -103,73 +108,73 @@
         border-color: @gray-20;
         border-style: solid;
         border-width: 1px 0 0 0;
-        
+
         .respond-to-max(599px, {
             border-width: 1px 0 1px 0;
         });
     }
-    
+
     &_node {
         width: 100%;
-        
+
         .respond-to-min(600px, {
             position: relative;
             margin-bottom: unit(@grid_gutter-width / 2, px);
         });
-        
+
         .respond-to-max(599px, {
             margin-bottom: -1px;
         });
-        
-        /* nested .org-chart_node blocks have different background color & borders */
+
+        // nested .org-chart_node blocks have different background color & borders.
         .org-chart_nodes {
             border-top: 5px solid @pacific-50;
-            
+
             .org-chart_node {
                 .respond-to-min(600px, {
                     margin-bottom: 0px;
                 });
             }
-            
+
             .org-chart_role {
                 .respond-to-min(600px, {
                     background: @pacific-20;
                     border-color: #E5F1FA;
                     border-width: 0 0 1px 0;
                 });
-                
+
                 .respond-to-max(599px, {
                     border-width: 1px 0 1px 0;
-                }); 
+                });
             }
         }
     }
-    
+
     .node_expander {
         position: absolute;
         right: 10px;
         top: 20px;
         z-index: 10;
-        
+
         .respond-to-max(599px, {
             height: 30px;
             top: 50%;
             margin-top: -@base-font-size-px/2;
         });
-        
+
         .expandable_link {
             font-size: @base-font-size-px;
         }
     }
-    
+
     #content-slider-container {
         position: relative;
         margin-left: -10px;
-        
+
         #content-slider {
             display: none;
         }
-        
+
         .slick-slide {
             margin-left: 10px;
         }
@@ -178,14 +183,14 @@
             margin-bottom: 0;
         }
     }
-    
+
     .content-hide {
         display: none;
         background-color: inherit;
         margin-bottom: 20px;
     }
 
-    .content-show, 
+    .content-show,
     .content-hide {
 
         .respond-to-max(599px, {
@@ -197,7 +202,7 @@
 
             &:focus {
                 outline: thin dotted;
-            }    
+            }
 
             &:hover {
                 border-color: @pacific-50;
@@ -225,7 +230,7 @@
 
 .role {
     display: block;
-    
+
     &_office {
         display: block;
         .h6();
@@ -248,7 +253,7 @@
     &:hover {
         color: @pacific-50;
     }
-    
+
     &:active{
         color: @navy;
     }
