Fixes DF-1585 - adds oscines

--- a/static/css/bureau.less
+++ b/static/css/bureau.less
@@ -24,6 +24,13 @@
             padding-top: unit(30px / @base-font-size-px, em);
         });
     }
+
+    .media_image {
+        width: 120px;
+        .respond-to-max(1024px, {
+            width: 80px;
+        });
+    }
 }
 
 .bureau-functions {
