Fixed the multi-line layout in the contact list on the contact-us page
- Using widths on the floated blocks keeps the label content separate from the link content
- Still not ideal on /the-bureau/history but if this works for people I have another fix for that

--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -500,3 +500,12 @@ tbody {
     name: EOF
     eof: true
 */
+
+.expandable_header-left {
+  width: 78%;
+}
+
+.expandable_header-right {
+  width: 22%;
+  text-align: right;
+}
