Fix for DF-1567

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -118,6 +118,7 @@
 
 @import (less) "beta.less";
 @import (less) "budget.less";
+@import (less) "business.less";
 @import (less) "event.less";
 @import (less) "bureau.less";
 @import (less) "bureau-structure.less";
