DF-1646 - Fixes header link text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
                                 <a class="list_link" href="/budget/">Budget and Strategy</a>
                             </li>
                             <li class="list_item list-expanding_list-item">
-                                <a class="list_link" href="/doing-business-with-us/">Working with Us</a>
+                                <a class="list_link" href="/doing-business-with-us/">Doing Business with Us</a>
                             </li>
                         </ul>
                     </div>
