--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,17 +3,18 @@
                    wrapper
                    list__unstyled
                    list__horizontal
-                   list-expanding">
-            <li class="list_item list-expanding_list-item">
+                   list-expanding"
+                   itemprop="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList">
+            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                 <a class="list_link list_link__disabled">Consumer Guides</a>
             </li>
-            <li class="list_item list-expanding_list-item">
+            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                 <a class="list_link list_link__disabled">Submit a Complaint</a>
             </li>
-            <li class="list_item list-expanding_list-item">
+            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                 <a class="list_link list_link__disabled">Data & Research</a>
             </li>
-            <li class="list_item list-expanding_list-item">
+            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                 <a class="list_link list_link__disabled">For Industry</a>
             </li>
             <li class="list_item list-expanding_list-item">
@@ -26,25 +27,25 @@
                                    list__horizontal
                                    desktop-menu_horizontal-list
                                    list-expanding list-expanding_child-list">
-                            <li class="list_item list-expanding_list-item">
+                            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                                 <a class="list_link" href="/blog/">Blog</a>
                             </li>
-                            <li class="list_item list-expanding_list-item">
+                            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                                 <a class="list_link" href="/newsroom/">Newsroom</a>
                             </li>
-                            <li class="list_item list-expanding_list-item">
+                            <li class="list_item list-expanding_list-item"  itemprop="itemListElement">
                                 <a class="list_link" href="/contact-us/">Contact Us</a>
                             </li>
-                            <li class="list_item list-expanding_list-item">
+                            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                                 <a class="list_link" href="/the-bureau/">About the Bureau</a>
                             </li>
-                            <li class="list_item list-expanding_list-item">
+                            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                                 <a class="list_link" href="/activity-log/">Activity Log</a>
                             </li>
-                            <li class="list_item list-expanding_list-item">
+                            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                                 <a class="list_link" href="/budget/">Budget and Strategy</a>
                             </li>
-                            <li class="list_item list-expanding_list-item">
+                            <li class="list_item list-expanding_list-item" itemprop="itemListElement">
                                 <a class="list_link" href="/doing-business-with-us/">Doing Business with Us</a>
                             </li>
                         </ul>
