--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -13,7 +13,8 @@
     {% for similar in more_like_this(post, search_types=doc_types, search_size=quantity) %}
         <li class="list_item">
             <a class="list_link"
-               href="{{ similar.permalink }}">
+               href="{{ similar.permalink }}"
+               itemprop="relatedLink">
                 {{ similar.title|safe }}
             </a>
         </li>
