--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                 <a class="list_link list_link__disabled">Data & Research</a>
             </li>
             <li class="list_item list-expanding_list-item">
-                <a class="list_link list_link__disabled">For Industry</a>
+                <a class="list_link list_link__disabled">Policy & Compliance</a>
             </li>
             <li class="list_item list-expanding_list-item">
                 <!-- TODO: Make this a <button>, it is not a real link -->
