Fix for DF-1576_Small_Business_nav
Fix for DF-1576_Small_Business_nav

--- a/static/css/business.less
+++ b/static/css/business.less
@@ -22,3 +22,17 @@
     });
 }
 
+.nav__small-business {
+    .expandable_header {
+        position: relative;
+    }
+
+    .expandable_header-right {
+        .node_expander();
+        .respond-to-max(@mobile-max, {
+            margin-top: -@base-font-size-px;   
+        });
+        top: @base-font-size-px;
+    }
+}
+
