DF-1664: Footer Update
DF-1664: Footer Update

DF-1664: Footer Update

DF-1664: Footer Update

Fix for Espanol link

Revisions for Code Review

Revisions for Code Review

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -153,22 +153,6 @@
 
             <div class="footer-left">
                 <div class="footer_nested-col-group">
-
-                    <div class="footer_logo">
-                        <img class="logo u-js-only"
-                             src="/static/img/logo_sm-exec.svg"
-                             onerror="this.onerror=null;this.src='/static/img/logo_sm-exec.png';"
-                             alt="Consumer Financial Protection Bureau"
-                             width="237"
-                             height="50">
-                        <noscript>
-                            <img class="logo logo__no-js"
-                                 src="/static/img/logo_sm-exec.png"
-                                 alt="Consumer Financial Protection Bureau"
-                                 width="237"
-                                 height="50">
-                        </noscript>
-                    </div>
                     <p class="footer_address">
                         <span class="footer_address-word-break">
                             Consumer Financial
@@ -178,7 +162,9 @@
                         Washington, D.C. 20552
                     </p>
                     <div class="footer_general-inqueries">
-                        <b class="footer_general-inqueries-label">For general inquiries only</b>
+                        <h4 class="footer_general-inqueries-label">
+                            <i>For general inquiries only</i>
+                        </h4>
                         <ul class="list list__links">
                             <li class="list_item">
                                 <a class="list_link footer_general-inqueries-phone" href="tel:202-435-7000">
@@ -199,7 +185,6 @@
         </div><!-- END .footer_nested-col-group -->
 
         <div class="footer-post">
-
             <ul class="footer_long-list">
                 <li class="list_item">
                     <a class="list_link list_link__disabled">
@@ -227,16 +212,6 @@
                     </a>
                 </li>
                 <li class="list_item">
-                    <a class="list_link" href="http://usa.gov/">
-                        USA.gov
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="http://www.federalreserve.gov/oig/default.htm">
-                        Office of Inspector General
-                    </a>
-                </li>
-                <li class="list_item">
                     <a class="list_link list_link__disabled">
                         Ombudsman
                     </a>
@@ -251,7 +226,18 @@
                     </a>
                 </li>
             </ul>
-
+            <ul class="footer_long-list">
+                <li class="list_item">
+                    <a class="list_link icon-link icon-link__external-link" href="http://usa.gov/">
+                        USA.gov
+                    </a>
+                </li>
+                <li class="list_item">
+                    <a class="list_link icon-link icon-link__external-link" href="http://www.federalreserve.gov/oig/default.htm">
+                        Office of Inspector General
+                    </a>
+                </li>
+            <ul>
         </div><!-- END .footer-post -->
 
     </aside><!-- END .wrapper.wrapper__match-content -->
