--- a/static/css/header.less
+++ b/static/css/header.less
@@ -95,7 +95,11 @@
 
         &_es {
             .h5();
-            .u-link__border();
+            .u-link__no-border();
+            color: @gray-20;
+            &:hover {
+                color: @gray-20;
+            }
         }
     });
 }
