Fixes #383 - adds units to respond-to
- Fixes #383 - adds units to respond-to
- Re-generates grunt files.

--- a/static/css/bureau-structure.less
+++ b/static/css/bureau-structure.less
@@ -5,12 +5,12 @@
 
 .org-chart {
 
-    .respond-to-min(600, {
+    .respond-to-min(600px, {
         width: 530px;
         margin: 0 auto;
     });
 
-    .respond-to-min(1024, {
+    .respond-to-min(1024px, {
         width: 660px;
     });
 
@@ -92,7 +92,7 @@
         });
 
         &_name {
-            .respond-to-min(600, {
+            .respond-to-min(600px, {
                 .h4();
                 margin-bottom: unit(15px / @font-size, em);
                 text-align: center;
